Fixed some z-index bugs

--- a/www/css/style-brutalist.mac.css
+++ b/www/css/style-brutalist.mac.css
@@ -971,6 +971,7 @@ head.content-width-fluid + body > * {
 	position: fixed;
 	left: 0;
 	top: 0;
+	z-index: 5001;
 
 	display: flex;
 	justify-content: center;
@@ -3191,6 +3192,7 @@ li {
 	right: 0;
 	bottom: 0;
 	left: 0;
+	z-index: 2;
 	display: none;
 	cursor: zoom-out;
 }
